<resources>
    <string name="app_name">Snackbar</string>

    <!-- String Login -->
    <string name="til_username">Nome do usuário</string>
    <string name="til_email">E-mail</string>
    <string name="til_password">Senha</string>
    <string name="til_passwordRep">Repetir Senha</string>
    <string name="btn_login">Login</string>
    <string name="btn_cad">Cadastrar</string>
    <string name="tv_info">Não tem conta? Cadastre-se</string>

    <string name="home_sem">SEM</string>
    <string name="home_mes">MÊS</string>
    <string name="home_ano">ANO</string>

    <string name="entries">ENTRADAS</string>
    <string name="spending">CADASTRAR</string>
    <string name="spending_viewall">TODAS TRANSAÇÕES</string>

    <string name="til_descr">Descrição</string>
    <string name="til_cat">Categoria</string>
    <string name="til_date">Data - Hora</string>
    <string name="til_valor">Valor</string>

    <string name="profile_name">Andre Saba</string>
    <string name="profile_email">andre_saba@email.com</string>
    <string name="profile_updateusername">Mudar Username</string>
    <string name="profile_updatepass">Alterar Senha</string>
    <string name="profile_support">Suporte</string>
    <string name="profile_logout">Sair</string>
    <string name="profile_info">Informação</string>

    <string name="gastos_bt_editar">EDITAR</string>
    <string name="gastos_bt_remover">REMOVER</string>

</resources>