<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <Button
        android:id="@+id/sem"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_sem"
        android:textSize="25dp"
        android:background="@android:color/transparent"
        android:textColorHighlight="@color/colorOrange"/>

    <Button
        android:id="@+id/mes"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_mes"
        android:textSize="25dp"
        android:background="@android:color/transparent"
        android:textColorHighlight="@color/colorOrange"/>

    <Button
        android:id="@+id/ano"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_ano"
        android:textSize="25dp"
        android:background="@android:color/transparent"
        android:textColorHighlight="@color/colorOrange"/>


</LinearLayout>