<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/top"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <include
        android:id="@+id/includetoolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileinfo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includetoolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">
            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                android:gravity="center"
                android:background="@drawable/round_login_body"
                android:backgroundTint="@color/colorGreyAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/round_login_body"
                android:backgroundTint="@color/colorWhite"
                android:src="@drawable/ic_add"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="253dp"
                tools:layout_editor_absoluteY="100dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_username"
            android:drawableRight="@drawable/ic_goto"
            android:textSize="15dp"
            android:id="@+id/change_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/profile_updateusername"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/ic_goto"
            android:textSize="15dp"
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/profile_updatepass"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_support"
            android:drawableRight="@drawable/ic_goto"
            android:textSize="15dp"
            android:id="@+id/get_support"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/profile_support"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_leave"
            android:drawableRight="@drawable/ic_goto"
            android:textSize="15dp"
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/profile_logout"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>