<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_margin="20dp"
    android:background="@drawable/round_login_body"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/til_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/til_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_login_button"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txv_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnImg_Google"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@drawable/ic_google"
             />

        <ImageButton
            android:id="@+id/btnImg_Face"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_facebook"
            />

        <ImageButton
            android:id="@+id/btnImg_Insta"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_instagram" />

    </LinearLayout>

</LinearLayout>
